--- a/config.cfg
+++ b/config.cfg
@@ -1,15 +1,11 @@
 [github]
-token = 2824ca6127f9a6ab92d8083c6f521dbb3428c060
+token = acfeffbae6e462685156aef1f7566dbf5799f5a1
 
 [labels]
-label12 = FFAA00
-label22 = CCAAFF
-label32 = 00FFXX
-label72 = 00FFCCAA
-
-[others]
-template-repo = MarekSuchanek/myLabels
+label1 = FFAA00
+label2 = CCAAFF
+label3 = 00FF00
 
 [repos]
-MatejObrtanec/pdfTestiOS = on
-MatejObrtanec/pdftron = on
+testTomik/test4= on
+testTomik/test2 = on
